[package]
name = "llua"
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["metaworm <metaworm@outlook.com>"]
description = "Low level bindings to Lua5.4"
homepage = "https://crates.io/crates/llua"
documentation = "https://docs.rs/llua"
repository = "https://github.com/udbg/llua"
keywords = ["lua", "scripting", "nostd"]
categories = ["api-bindings", "no-std"]

[features]
default = ['std']
vendored = []
thread = ['std', 'parking_lot']
std = ['bitflags']

[dependencies]
cty = '0.2'
glob = '0.3'
defer-lite = '1'
derive_more = '0.99'
serde_bytes = '0.11'
serde-transcode = '1'
regex = {version = '1.5', optional = true}
bitflags = {version = '1.3', optional = true}
parking_lot = {version = '0.12', optional = true}
libc = {version = '0.2', default-features = false}
serde = {version = '1.0', default-features = false, features = ['rc', 'derive']}
cstrptr = {version = '0.1.2', default-features = false, features = ['alloc']}

[dev-dependencies]
tokio = {version = '1.4', features = ["net", "time", "macros", "rt"]}
llua = {path = ".", features = ['vendored', 'thread']}

[build-dependencies]
cc = '1'